--- a/AppHost/Properties/launchSettings.json
+++ b/AppHost/Properties/launchSettings.json
@@ -5,12 +5,13 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:17174;http://localhost:15275",
+      "applicationUrl": "http://localhost:17174;http://localhost:15275",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:21179",
-        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22051"
+        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true",
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:19136",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20113"
       }
     },
     "http": {
@@ -21,6 +22,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
+        "ASPIRE_ALLOW_UNSECURED_TRANSPORT": "true",
         "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:19136",
         "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "http://localhost:20113"
       }
