Replace Kafka messaging with Redis Pub/Sub
Migrates event publishing and consumption from Kafka to Redis Pub/Sub across all services. Removes Kafka-related code, configuration, and dependencies, and introduces Redis-based event publisher and consumer implementations. Updates dependency injection and messaging extension methods to use Redis. Adds design-time DbContext factories and initial EF Core migrations for DocumentService and LicenseService. Updates solution structure and project references accordingly.

--- a/src/Services/TenantService/TenantService.Infrastructure/TenantService.Infrastructure.csproj
+++ b/src/Services/TenantService/TenantService.Infrastructure/TenantService.Infrastructure.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <PackageReference Include="Confluent.Kafka" Version="2.11.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
     <PackageReference Include="WolverineFx" Version="4.10.0" />
   </ItemGroup>
 
