Add and enhance domain tests for License and Tenant services
Added new unit tests for LicenseStatusHistory, License, Renewal, Tenant, User, and value objects to improve domain coverage. Updated architecture tests to support pluralized handler namespaces and excluded LoginCommandHandler from IUnitOfWork requirements. Refactored domain entities to be sealed and removed unused repository methods. Updated test project references to include domain projects for both LicenseService and TenantService.

--- a/src/Services/TenantService/TenantService.Tests/TenantService.Tests.csproj
+++ b/src/Services/TenantService/TenantService.Tests/TenantService.Tests.csproj
@@ -22,7 +22,9 @@
   <ItemGroup>
     <ProjectReference Include="..\TenantService.Api\TenantService.Api.csproj" />
     <ProjectReference Include="..\TenantService.Application\TenantService.Application.csproj" />
+    <ProjectReference Include="..\TenantService.Domain\TenantService.Domain.csproj" />
     <ProjectReference Include="..\..\..\Common\Common.Application\Common.Application.csproj" />
+    <ProjectReference Include="..\..\..\Common\Common.Domain\Common.Domain.csproj" />
   </ItemGroup>
 
 </Project>
