--- a/src/Services/LicenseService/LicenseService.Tests/LicenseService.Tests.csproj
+++ b/src/Services/LicenseService/LicenseService.Tests/LicenseService.Tests.csproj
@@ -22,7 +22,9 @@
   <ItemGroup>
     <ProjectReference Include="..\LicenseService.Api\LicenseService.Api.csproj" />
     <ProjectReference Include="..\LicenseService.Application\LicenseService.Application.csproj" />
+    <ProjectReference Include="..\LicenseService.Domain\LicenseService.Domain.csproj" />
     <ProjectReference Include="..\..\..\Common\Common.Application\Common.Application.csproj" />
+    <ProjectReference Include="..\..\..\Common\Common.Domain\Common.Domain.csproj" />
   </ItemGroup>
 
 </Project>
